fix view bugs (overflow and position of svg)

--- a/src/app/shared/components/token-amount-estimated/token-amount-estimated.component.scss
+++ b/src/app/shared/components/token-amount-estimated/token-amount-estimated.component.scss
@@ -137,7 +137,6 @@
   }
 
   &__output {
-    overflow: hidden;
   }
 
   &__hint {
